# Potter

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
plugins/: explain.py  summarize.py  translate.py
src/: config.rs  history.rs  hotkey.rs  main.rs  window.rs
src/llm/: claude.rs  gemini.rs  local.rs  mod.rs
