[package]
name = "potter"
version = "0.1.0"
edition = "2021"
authors = ["Yakout <marawan@marawan.net>"]
description = "A Rust-powered LLM quick-access overlay daemon"
license = "MIT"
repository = "https://github.com/MarawanYakout/Potter"
keywords = ["llm", "ai", "overlay", "gemini", "ollama"]
categories = ["command-line-utilities"]

[[bin]]
name = "potter"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }

# rustls-tls avoids a hard dependency on the system OpenSSL version.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

gtk4 = { version = "0.9", features = ["v4_12"] }

rdev = "0.5"

futures-util = "0.3"
bytes = "1"
async-trait = "0.1"
dirs = "5"
anyhow = "1"
thiserror = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# pulldown-cmark removed until Phase 3 markdown rendering is implemented.

[dev-dependencies]
tokio-test = "0.4"
mockito = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
